Croppie bugs fixed

--- a/css/main.css
+++ b/css/main.css
@@ -888,6 +888,7 @@ i.icon.popup-heading-icon:hover{
 .place-avatar-cropper-wrap{
 	width: 100%;
 	height: 500px;
+	margin: 0 0 30px 0;
 }
 
 .cr-boundary{
